# fitch-proof-checker

./: CHANGELOG.md  Check.hs  Main.hs  Proof.hs  Prop.hs  README.md  Rule.hs  StackMultiSet.hs  fitch-proof-checker.cabal
app/: Main.hs  ParseCheck.hs  VariousProofs.hs
proofs/: 1.fitch  2.fitch  3.fitch  4.fitch  5.fitch  6.fitch  list.md
src/: Check.hs  FitchParse.hs  Proof.hs  Prop.hs  Rules.hs  Tableau.hs
