cabal-version:      3.0
name:               fitch-proof-checker
version:            0.1.0.0
synopsis:
    A simple and naive checker for proofs written in Fitch notation

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             hehelego
maintainer:         hahalegao@gmail.com

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Check, Proof, Prop

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.17.2.0,
        containers ^>= 0.6.7,
        transformers ^>= 0.5.6.2,
        mtl ^>= 2.2.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable fitch-proof-checker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.17.2.0,
        transformers ^>= 0.5.6.2,
        mtl ^>= 2.2.2,
        fitch-proof-checker
    hs-source-dirs:   app
    default-language: Haskell2010
